Fix nav color on dark mode (#1139)

--- a/source/_static/scss/includes/_theme.scss
+++ b/source/_static/scss/includes/_theme.scss
@@ -81,7 +81,7 @@ $theme-properties: (
     // Mainmenu
     --nav-bg: $white $dark-100,
     --nav-text-color: $white $text-dark-color,
-    --nav-text-muted-color: #1C1C1C #1C1C1C,
+    --nav-text-muted-color: #1C1C1C darken($text-dark-color, 10%),
     --nav-item-border-color: $white $dark-500,
     --nav-item-arrow: url(../img/icons/nav-arrow.svg) url(../img/icons/nav-arrow-dark.svg),
     --nav-toggle-hover-border-color: $white $dark-500,
